--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "i": "^0.3.7",
     "npm": "^11.3.0",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vuetify": "^2.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
