--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i": "^0.3.7",
     "npm": "^11.3.0",
     "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
     "vuetify": "^2.7.2"
   },
   "devDependencies": {
