--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "i": "^0.3.7",
     "npm": "^11.3.0",
+    "test-utils": "^1.1.1",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
     "vuetify": "^2.7.2"
@@ -22,8 +23,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "jest": "^29.7.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
